# rollivr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  ci.yml
arduino-software/: arduino-software.ino
cmake/: Windeployqt.cmake
cmake/modules/: FindOpenVR.cmake
driver/: CMakeLists.txt
driver/driver_files/driver/wheelchair/: driver.vrdrivermanifest
driver/driver_files/resources/config/: comports.txt
driver/driver_files/resources/input/: rollivr_controller_bindings.json  wheelchair_controller_bindings.json
driver/driver_files/src/: WheelchairController.h
driver/driver_files/src/Driver/: WheelchairController.cpp  WheelchairController.h  WheelchairDriver.cpp  WheelchairDriver.h
driver/driver_files/src/Native/: DriverFactory.hpp  WheelchairDriverFactory.cpp  WheelchairDriverFactory.h
driver/driver_files/wheelchair/resources/input/: wheelchair_controller_bindings.json
driver/driver_files/wheelchair/resources/localization/: localization.json
driver/libraries/serial/: .gitignore  CMakeLists.txt
driver/src/: RolliVRController.cpp  RolliVRController.h  RolliVRDriver.cpp  RolliVRDriver.h  RolliVRDriverFactory.cpp  RolliVRDriverFactory.h  SerialPortInterface.cpp  SerialPortInterface.h  WheelchairController.cpp  WheelchairController.h  WheelchairDriver.cpp  WheelchairDriver.h  WheelchairDriverFactory.cpp
driver_files/driver/wheelchair/resources/localization/: localization.json
driver_files/src/Driver/: VRController.cpp  VRController.hpp  VRDriver.cpp
embedded/arduino-software/: arduino-software.ino
embedded/arduino-software-encoder/: arduino-software-encoder.ino
hardware/encoder-holder/: encoder-holder.f3d  encoder-holder.stl
hardware/encoder-ring/: encoder-ring.f3d  encoder-ring.stl
hardware/platform-bracket/: platform-bracket-1.stl  platform-bracket-2.stl  platform-bracket.f3d
hardware/wheelchair-bracket/: wheelchair-bracket-1.stl  wheelchair-bracket-2.stl  wheelchair-bracket-3.stl  wheelchair-bracket.f3d
installer/: extra_install.nsh  extra_uninstall.nsh
openvr-driver/: .gitignore  CMakeLists.txt
openvr-driver/driver_files/driver/wheelchair/resources/input/: wheelchair_controller_bindings.json
openvr-driver/driver_files/src/Driver/: VRController.cpp  VRDriver.cpp  VRDriver.hpp
openvr-driver/driver_files/src/Native/: DriverFactory.cpp
openvr-driver/libraries/serial/: CMakeLists.txt
overlay/: CMakeLists.txt  WheelchairOverlay.pro  WheelchairOverlayController.cpp  WheelchairOverlayController.h  WheelchairOverlayWidget.cpp  WheelchairOverlayWidget.h  WheelchairOverlayWidget.ui  main.cpp
overlay/application_files/: install_manifest.bat  rollivr_overlay_vractions.json  wheelchairoverlay_bindings_wheelchaircontroller.json  wheelchairoverlay_vractions.json
overlay/src/: RolliVROverlay.cpp  RolliVROverlay.h  RolliVROverlayController.cpp  RolliVROverlayController.h  RolliVROverlayWidget.cpp  RolliVROverlayWidget.h  RolliVROverlayWidget.ui  WheelchairOverlay.pro  WheelchairOverlayController.cpp  WheelchairOverlayController.h  WheelchairOverlayWidget.cpp  WheelchairOverlayWidget.h  WheelchairOverlayWidget.ui  main.cpp  main.h
software/: .gitignore  CMakeLists.txt
software/cmake/: NSIS.template.in  Windeployqt.cmake
software/driver/driver_files/: driver.vrdrivermanifest
software/driver/driver_files/resources/localization/: localization.json
software/driver/src/: RolliVRController.cpp  RolliVRDriver.cpp  RolliVRDriver.h  RolliVRDriverFactory.cpp  SerialPortInterface.h
software/installer/: extra_defs.nsh  extra_install.nsh  extra_uninstall.nsh  license.txt
software/overlay/application_files/: install_manifest.bat  manifest.vrmanifest  rollivr_overlay_bindings_rollivr_controller.json
software/overlay/src/: RolliVROverlayWidget.cpp  RolliVROverlayWidget.ui  main.h
